gateone.py:  ApplicationWebSocket.send_js_and_css(), ApplicationWebSocket.send_css(), and ApplicationWebSocket.render_and_send_css() now take a "media" keyword argument.  It specifies what the "media=" parameter should be set to when creating <style> elements.  If no media is specified it will default to "screen". gateone.py:  ApplicationWebSocket.send_js(), ApplicationWebSocket.send_css(), and ApplicationWebSocket.render_and_send_css() now take an "element_id" keyword argument.  It will be passed to ApplicationWebSocket.send_css() as part of its normal functionality. gateone.js:  Instead of explicitly looking for a "print" stylesheet it now uses the incoming "media" key/value to set the created <style> element.  If none is given it will default to "screen". terminal.py:  Fixed a bug where you could get an uncaught exception when clicking on the terminal encoding input element. terminal.py:  Added GateOne.Terminal.printScreen() and attached it to the Meta-P keyboard shortcut.  It will open up the print dialog with just the terminal screen (no scrollback buffer). terminal.py:  Added some logic to the "go:grid_view:open" event to ensure that any scaled terminals are un-scaled so there's no overlap in grid view. Terminal Print Stylesheet:  Lots and lots of tweaks.  It will now look decent even if you have your terminal scaled to huge sizes via the rows/columns setting.

--- a/gateone/applications/terminal/templates/printing/default.css
+++ b/gateone/applications/terminal/templates/printing/default.css
@@ -56,6 +56,11 @@ textarea {
     padding: 0;
     float: none;
     white-space: pre-wrap;
+    -webkit-transform: none !important;
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    -o-transform: none !important;
+    transform: none !important;
 }
 span.cursor { color: #fff; background-color: #000; }
 span.reverse { background-color: #aaa; color: #fff; }
@@ -63,6 +68,9 @@ span.reverse { background-color: #aaa; color: #fff; }
     display: none;
 }
 .toolbar {
+    display: none;
+}
+.toolbar_container {
     display: none;
 }
 .✈infocontainer {
@@ -77,7 +85,7 @@ span.reverse { background-color: #aaa; color: #fff; }
     font-size: 1.1em;
 }
 .pastearea {
-    display: none;
+    display: none !important;
 }
 .go_none { /* No prefix on this one because of issues with that in the JS code */
     display: none;
@@ -122,7 +130,7 @@ span.reverse { background-color: #aaa; color: #fff; }
 .✈user_info a:hover {
     cursor: pointer;
 }
-  .dialogcontainer {
+.✈dialogcontainer {
     display: none;
 }
 .✈dialogdiv {
